@@ -20,11 +20,12 @@ Release:    v2014012405
 - Javascript reorganised to fit better with Moodle guidelines
 - Erroneous debugging removed (Thanks to Skylar Kelty).
 - Check for XMLWriter extension added to settings area.
+- Removed restriction on word count and content length if accepting any file type in PP.
+- Removed restriction in PP to allow submissions after the due date.
 - Automatic connection test and upgrade check in settings stopped and changed to buttons.
 - Fixes:
 	> Allow Non OR file type setting now being changed in Turnitin
 	> New file submissions with same filename display correct OR link in PP.
-	> Removed restriction on word count and content length if accepting any file type in PP.
 
 ####################################################################################
 
